# deploycli

./: .gitignore  Cargo.toml  README.md  config.toml  install_client.sh  install_server.sh
.github/workflows/: release.yml
src/: config.rs  db.rs  lib.rs  main.rs  result.rs  router.rs  utils.rs
