[package]
name = "deploycli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
salvo = "0.78.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
toml = "0.8.22"
clia-tracing-config = "0.2.7"
log = "0.4.27"
zip = "2.6.1"
thiserror = "2.0.12"
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = [
    "blocking",
    "json",
    "multipart",
    "rustls-tls",
], default-features = false }
clap = { version = "4.5.37", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
colored = "3.0.0"
polodb_core = "5.1.3"
md5 = "0.7.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"   # 优化体积
panic = "abort"   # 减少 panic 处理代码
strip = true      # 去除调试信息
